--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
     <header>
         <h1>Seth Thomas Portfolio</h1>
     </header>
-
+    <main>About Me</main>
+    <aside>Projects I Have Created
+        <ul>
+            <li><a href="https://github.com/SethThomaspowered/littlelibraries">Book Recommender</a></li>
+            <li><a href="https://github.com/SethThomaspowered/kentuckianaparks"></a>Kentuckiana Parks</li>
+            <li><a href="https://github.com/SethThomaspowered/isitprime"></a>Is it Prime</li>
+            <li><a href="https://github.com/SethThomaspowered/towers_of_hanoi"></a>Towers of Hanoi</li>
+            <li><a href="https://github.com/SethThomaspowered/lougle"></a>Lougle</li>
+        </ul>
+    </aside>
+    <footer>Created by Seth Thomas</footer>
 </body>
 </html>
