--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <aside>Projects I Have Created
         <ul>
             <li><a href="https://github.com/SethThomaspowered/littlelibraries">Book Recommender</a></li>
-            <li><a href="https://github.com/SethThomaspowered/kentuckianaparks"></a>Kentuckiana Parks</li>
-            <li><a href="https://github.com/SethThomaspowered/isitprime"></a>Is it Prime</li>
-            <li><a href="https://github.com/SethThomaspowered/towers_of_hanoi"></a>Towers of Hanoi</li>
-            <li><a href="https://github.com/SethThomaspowered/lougle"></a>Lougle</li>
+            <li><a href="https://github.com/SethThomaspowered/kentuckianaparks">Kentuckiana Parks</a></li>
+            <li><a href="https://github.com/SethThomaspowered/isitprime">Is it Prime</a></li>
+            <li><a href="https://github.com/SethThomaspowered/towers_of_hanoi">Towers of Hanoi</a></li>
+            <li><a href="https://github.com/SethThomaspowered/lougle">Lougle</a></li>
         </ul>
     </aside>
     <footer>Created by Seth Thomas</footer>
