added contact info in footer

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     <header>
         <h1>Seth Thomas Portfolio</h1>
     </header>
-    <main>About Me</main>
-    <aside>Projects I Have Created
-        <ul>
+    <main>
+        <h2>About Me</h2>
+    </main>
+    <aside>
+        <ul>Projects I Have Created
             <li><a href="https://github.com/SethThomaspowered/littlelibraries">Book Recommender</a></li>
             <li><a href="https://github.com/SethThomaspowered/kentuckianaparks">Kentuckiana Parks</a></li>
             <li><a href="https://github.com/SethThomaspowered/isitprime">Is it Prime</a></li>
@@ -21,6 +23,6 @@
             <li><a href="https://github.com/SethThomaspowered/lougle">Lougle</a></li>
         </ul>
     </aside>
-    <footer>Created by Seth Thomas</footer>
+    <footer><h2>Created by <a href="lougleforlouisville@gmail.com">Seth Thomas</a></h2></footer>
 </body>
 </html>
