fixed email feature

--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
             <li><a href="https://github.com/SethThomaspowered/lougle">Lougle</a></li>
         </ul>
     </aside>
-    <footer><h2>Created by <a href="lougleforlouisville@gmail.com">Seth Thomas</a></h2></footer>
+    <footer><h2>Created by <a href="mailto:lougleforlouisville@gmail.com">Seth Thomas</a></h2></footer>
 </body>
 </html>
