--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     </header>
     <main>
         <h2>About Me</h2>
+        <p>After 15 plus years of being the "IT guy" for my coworkers, <br>
+             I decided to turn my passion for technology into a career.</p>
+        <h3>Mission:</h3>
+        <p>Building better linking communities.</p>
     </main>
     <aside>
         <ul>Projects I Have Created
