added little library photos

--- a/index.html
+++ b/index.html
@@ -11,12 +11,23 @@
     <header>
         <h1>Seth Thomas Portfolio</h1>
     </header>
+    <div>
+        <img src="german_library.jpg" alt="Little Library Picture" width=50%>
+        <img src="plaza_ave.jpg" alt="Little Library Picture" width=50%>
+        <img src="windsor_place.jpg" alt="Little Library Picture" width=50%>
+    </div>
     <main>
         <h2>About Me</h2>
         <p>After 15 plus years of being the "IT guy" for my coworkers, <br>
              I decided to turn my passion for technology into a career.</p>
         <h3>Mission:</h3>
-        <p>Building better linking communities.</p>
+        <p>Building better relationshop by linking communities.</p>
+        <ol>
+            <li>Creating databases that span cities and counties.</li>
+            <li>Building search functionality</li>
+            <li>Helping local business compete with global corporations.</li>
+            <li>Helping you find your new favorite park.</li>
+        </ol>
     </main>
     <aside>
         <ul>Projects I Have Created
