added copyright to footer

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <li><a href="https://github.com/SethThomaspowered/lougle">Lougle</a></li>
         </ul>
     </aside>
-    <footer><h2>Created by <a href="mailto:lougleforlouisville@gmail.com">Seth Thomas</a></h2></footer>
+    <footer><h2>Created by <a href="mailto:lougleforlouisville@gmail.com">Seth Thomas</a> &copy;<span id="copyright"></span></h2></footer>
+    <script src="app.js"></script>
 </body>
 </html>
