commented out main element

--- a/index.html
+++ b/index.html
@@ -11,33 +11,35 @@
     <header>
         <h1>Seth Thomas Portfolio</h1>
     </header>
-    <div>
-        <img src="german_library.jpg" alt="Little Library Picture" width=50%>
-        <img src="plaza_ave.jpg" alt="Little Library Picture" width=50%>
-        <img src="windsor_place.jpg" alt="Little Library Picture" width=50%>
-    </div>
-    <main>
-        <h2>About Me</h2>
-        <p>After 15 plus years of being the "IT guy" for my coworkers, <br>
+    <!-- <main> -->
+        <div class="library">
+            <img src="german_library.jpg" alt="Little Library Picture" width=50%>
+            <img src="plaza_ave.jpg" alt="Little Library Picture" width=50%>
+            <img src="windsor_place.jpg" alt="Little Library Picture" width=50%>
+        </div>
+        <article>
+            <h2>About Me</h2>
+            <p>After 15 plus years of being the "IT guy" for my coworkers, <br>
              I decided to turn my passion for technology into a career.</p>
-        <h3>Mission:</h3>
-        <p>Building better relationshop by linking communities.</p>
-        <ol>
-            <li>Creating databases that span cities and counties.</li>
-            <li>Building search functionality</li>
-            <li>Helping local business compete with global corporations.</li>
-            <li>Helping you find your new favorite park.</li>
-        </ol>
-    </main>
-    <aside>
-        <ul>Projects I Have Created
-            <li><a href="https://github.com/SethThomaspowered/littlelibraries">Book Recommender</a></li>
-            <li><a href="https://github.com/SethThomaspowered/kentuckianaparks">Kentuckiana Parks</a></li>
-            <li><a href="https://github.com/SethThomaspowered/isitprime">Is it Prime</a></li>
-            <li><a href="https://github.com/SethThomaspowered/towers_of_hanoi">Towers of Hanoi</a></li>
-            <li><a href="https://github.com/SethThomaspowered/lougle">Lougle</a></li>
-        </ul>
-    </aside>
+            <h3>Mission:</h3>
+            <p>Building better relationshop by linking communities.</p>
+            <ol>
+                <li>Creating databases that span cities and counties.</li>
+                <li>Building search functionality</li>
+                <li>Helping local business compete with global corporations.</li>
+                <li>Helping you find your new favorite park.</li>
+            </ol>
+        </article>
+        <aside>
+            <ul>Projects I Have Created
+                <li><a href="https://github.com/SethThomaspowered/littlelibraries">Book Recommender</a></li>
+                <li><a href="https://github.com/SethThomaspowered/kentuckianaparks">Kentuckiana Parks</a></li>
+                <li><a href="https://github.com/SethThomaspowered/isitprime">Is it Prime</a></li>
+                <li><a href="https://github.com/SethThomaspowered/towers_of_hanoi">Towers of Hanoi</a></li>
+                <li><a href="https://github.com/SethThomaspowered/lougle">Lougle</a></li>
+            </ul>
+        </aside>
+    <!-- </main> -->
     <footer><h2>Created by <a href="mailto:lougleforlouisville@gmail.com">Seth Thomas</a> &copy;<span id="copyright"></span></h2></footer>
     <script src="app.js"></script>
 </body>
