added liddel library

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <img src="german_library.jpg" alt="Little Library Picture" width=50%>
             <img src="plaza_ave.jpg" alt="Little Library Picture" width=50%>
             <img src="windsor_place.jpg" alt="Little Library Picture" width=50%>
+            <img src="liddel_oxford.jpg" alt="Liddell Oxford Library" width= 50%>
         </div>
         <article>
             <h2>About Me</h2>
