--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <div class="library">
             <img src="german_library.jpg" alt="Little Library Picture" width=50%>
             <img src="plaza_ave.jpg" alt="Little Library Picture" width=50%>
-            <img src="windsor_place.jpg" alt="Little Library Picture" width=50%>
-            <img src="liddel_oxford.jpg" alt="Liddell Oxford Library" width= 50%>
+            <img src="windsor_place.jpg" alt="Little Library Picture" class="hidden" width=50%>
+            <img src="liddel_oxford.jpg" alt="Liddell Oxford Library" class="hidden" width= 50%>
         </div>
         <article>
             <h2>About Me</h2>
@@ -41,7 +41,9 @@
             </ul>
         </aside>
     <!-- </main> -->
-    <footer><h2>Created by <a href="mailto:lougleforlouisville@gmail.com">Seth Thomas</a> &copy;<span id="copyright"></span></h2></footer>
+    <footer>
+        <h3>Created by <a href="mailto:lougleforlouisville@gmail.com">Seth Thomas</a> &copy;<span id="copyright"></span></h3>
+    </footer>
     <script src="app.js"></script>
 </body>
 </html>
