updated some for the project links

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
         <aside>
             <ul>Projects I Have Created
                 <li><a href="https://github.com/SethThomaspowered/littlelibraries">Book Recommender</a></li>
-                <li><a href="https://github.com/SethThomaspowered/kentuckianaparks">Kentuckiana Parks</a></li>
+                <li><a href="https://SethThomaspwered.github.io/kentuckianaparks">Kentuckiana Parks</a></li>
                 <li><a href="https://github.com/SethThomaspowered/isitprime">Is it Prime</a></li>
                 <li><a href="https://github.com/SethThomaspowered/towers_of_hanoi">Towers of Hanoi</a></li>
-                <li><a href="https://github.com/SethThomaspowered/lougle">Lougle</a></li>
+                <li><a href="https://SethThomaspowered.github.io/lougle">Lougle</a></li>
             </ul>
         </aside>
     <!-- </main> -->
