Fixed spelling errors

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <p>After 15 plus years of being the "IT guy" for my coworkers, <br>
              I decided to turn my passion for technology into a career.</p>
             <h3>Mission:</h3>
-            <p>Building better relationshop by linking communities.</p>
+            <p>Building better relationships by linking communities.</p>
             <ol>
                 <li>Creating databases that span cities and counties.</li>
                 <li>Building search functionality</li>
